--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mocha": "^10.2.0"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.1"
